--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,31 @@
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+body {
+    background-color: orange;
+}
 
 h1.home-page {
     font-weight: bold;
     font-size: 60px;
+    text-align: center;
     
 }
 
 a {
     font-size: 40px;
+    font-weight: bold;
     text-align: center;
-    background-color: lightblue;
+    background-color: white;
+    text-decoration: none;
+    display: block;
+    margin: 20px auto;
+    padding: 8px;
+    width: 600px;
+    height: 50px;
+}
+a:hover {
+    background-color: darkblue;
 }
 
 .spaghetti {
